# myapi-wrapper

./: README.md  main.py  myapiwrapper.py  pyproject.toml  wrapper.py
myapi_wrapper/: __init__.py  myapi_wrapper.py
