[tool.poetry]
name = "myapi-wrapper"
version = "0.1.0"
description = ""
authors = ["tct123 <42028373+tct123@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
